--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -188,7 +188,7 @@
 	<div class="row">
 		<div id="libro1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="http://localhost:8080/SERVER-MODULE-SERVICES/Images" alt="img/mu1.jpg" class="img-circle">
+				<img src="http://localhost:8080/SERVER-MODULE-SERVICES/Images?,sdlkghlsaiudflkuagksagdfkashgfkashfkw" alt="img/mu1.jpg" class="img-circle">
 				<div class="caption">
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
