Login/Registro - Mostrar nick en barra

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -30,9 +30,13 @@
 			<button class="btn btn-primary barraBusquedaHome" style="margin-top: initial;">
 				<span class="glyphicon glyphicon-search"></span> Buscar</button>
 		</form>
-		<div class="col-md-2 pull-right">			
+		<div class="col-md-2 pull-right" id="Login-Registro-Div">
 			<button class="btn btn-primary barraBusquedaHome" href="#registroUsuario" onclick="mostrarElemento('registroUsuario')">Registrarse</button>
-			<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario')">Login</button>	
+			<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario')">Login</button>
+		</div>
+		<div class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
+			<a href="#" class="nick">nick</a>
+			<a href="#">(Logout)</a>
 		</div>
 	</div>
 </nav>
