--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -397,6 +397,8 @@
 </body>
 
 <script src="js/jquery-ui.js"></script>
+<script src="js/globalesProyecto.js"></script>
+<script src="js/Prototipos.js"></script>
 <script src="js/holder.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/LlamadasAjax.js"></script>
