--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
 			<a href="#" class="nick">nick</a>
-			<a href="#">(Logout)</a>
+			<a href="#" onclick="logoutUsuario()">(Logout)</a>
 		</div>
 	</div>
 </nav>
