agregando referencias css que faltaban, fixed control de refresh

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -42,7 +42,6 @@
 </nav>
 </div>	
 	<div class="container-fluid carouselInicio">
-	<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno">Bajar!!</a>
 	    <div class="col-md-10">
 			<div id="myCarousel" class="carousel">
 				<div class="carousel-inner">
@@ -73,7 +72,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
 						USD 2.0
 					</p>
 				</div>
@@ -88,7 +87,7 @@
 					<p>Descripcion</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -103,7 +102,7 @@
 					<p>Descripcion</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -118,7 +117,7 @@
 					<p>Descripcion</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -143,7 +142,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -158,7 +157,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -173,7 +172,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -188,7 +187,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>
 						USD 2.0
 					</p>
 				</div>
@@ -212,7 +211,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -227,7 +226,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -242,7 +241,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -257,7 +256,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -280,7 +279,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -295,7 +294,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -310,7 +309,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -325,7 +324,7 @@
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
 					<p class="precio">
 						<a href="#" class="btn btn-primary" role="button">Ver</a>
-						<a href="#" class="btn btn-default" role="button">Comprar</a>	
+						<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 						USD 2.0
 					</p>
 				</div>
@@ -403,4 +402,5 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/LlamadasAjax.js"></script>
 <script src="js/getSet.js"></script>
+<script src="js/eventos.js"></script>
 <script src="js/main.js"></script>
