--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -74,7 +74,7 @@
 	<div class="row">
 		<div id="aplicacion1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Aplicacion 4</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -89,7 +89,7 @@
 	  
 		<div id="aplicacion2"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-circle">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Aplicacion 3</h3>
 					<p>Descripcion</p>
@@ -104,7 +104,7 @@
 
 		<div id="aplicacion3"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-circle">
+				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Aplicacion 2</h3>
 					<p>Descripcion</p>
@@ -119,7 +119,7 @@
 
 		<div id="aplicacion4" class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-circle">
+				<img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Aplicacion 1</h3>
 					<p>Descripcion</p>
@@ -144,7 +144,7 @@
 	<div class="row">
 		<div id="libro1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="http://localhost:8080/SERVER-MODULE-SERVICES/Images?,sdlkghlsaiudflkuagksagdfkashgfkashfkw" alt="img/mu1.jpg" class="img-circle">
+				<img src="http://localhost:8080/SERVER-MODULE-SERVICES/Images?,sdlkghlsaiudflkuagksagdfkashgfkashfkw" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -159,7 +159,7 @@
 		
 		<div id="libro2"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/li2.jpg" alt="img/mu2.jpg" class="img-circle">
+				<img src="img/li2.jpg" alt="img/mu2.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -174,7 +174,7 @@
 		
 		<div id="libro3"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/li3.jpg" alt="img/mu3.jpg" class="img-circle">
+				<img src="img/li3.jpg" alt="img/mu3.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -189,7 +189,7 @@
 		
 		<div id="libro4"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/li4.png" alt="img/mu4.jpg" class="img-circle">
+				<img src="img/li4.png" alt="img/mu4.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h3>Libro 1</h3>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -213,7 +213,7 @@
 	<div class="row">
 		<div id="video1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Video 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -228,7 +228,7 @@
 		
 		<div id="video2"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Video 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -243,7 +243,7 @@
 		
 		<div id="video3"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Video 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -258,7 +258,7 @@
 		
 		<div id="video4"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Video 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -281,7 +281,7 @@
 	<div class="row">
 		<div id="musica1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle">
+				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Musica 1</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -296,7 +296,7 @@
 		
 		<div id="musica2"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-circle">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Musica 2</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -311,7 +311,7 @@
 		
 		<div id="musica3"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-circle">
+				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Musica 3</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
@@ -326,7 +326,7 @@
 		
 		<div id="musica4"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
-				<img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-circle">
+				<img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-circle miniatura">
 				<div class="caption">
 					<h2>Musica 4</h2>
 					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
