Registrar proveedor con creacion de directorios en sistema de archivos, registro de usuario con creacion de directorio. Todo con testeo basico

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -399,7 +399,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" data-dismiss="modal" class="btn" onclick="ocultarElemento('registroUsuario')">Cerrar</button>
-			<button type="button" class="btn btn-primary" onclick="crearUsuario()">Confirmar</button>
+			<button type="button" class="btn btn-primary" onclick="crearProveedor()">Confirmar</button>
 		</div>
 	</div>
 </body>
